keycloak: allows AJP communication over port 8009

--- a/roles/3trains_keycloak/tasks/main.yml
+++ b/roles/3trains_keycloak/tasks/main.yml
@@ -113,6 +113,7 @@
   loop:
     - "{{ keycloak_http_port }}/tcp"
     - "{{ keycloak_https_port }}/tcp"
+    - "8009/tcp"
 
 - name: configure keycloak scervice script wrapper
   become: yes
