jbcs: add ssl support

--- a/roles/3trains_jbcs/defaults/main.yml
+++ b/roles/3trains_jbcs/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+httpd_ssl: yes
 httpd:
   bind_address: "{{ override_jbcs_bind_address | default('localhost') }}"
   listen_port: "{{ override_jbcs_listen_port | default('80') }}"
