--- a/roles/3trains_jbcs/tasks/ssl.yml
+++ b/roles/3trains_jbcs/tasks/ssl.yml
@@ -8,14 +8,14 @@
 - set_fact:
     ssl_conf: "{{ httpd.home }}/httpd/conf.d/ssl.conf"
 
+- set_fact:
+    ssl_conf_disabled: "{{ ssl_conf }}.disabled"
+
+- stat:
+    path: "{{ ssl_conf }}"
+  register: ssl_conf_file
+
 - block:
-    - set_fact:
-        ssl_conf_disabled: "{{ ssl_conf }}.disabled"
-
-    - stat:
-        path: "{{ ssl_conf }}"
-      register: ssl_conf_file
-
     - stat:
         path: "{{ ssl_conf_disabled }}"
       register: ssl_conf_disabled_file
@@ -42,11 +42,23 @@
   when:
     - not httpd_ssl is defined
 
-- name: "Ensures HTTPd SSL configuration is deployed"
-  template:
-    src: templates/ssl.conf.j2
-    dest: "{{ ssl_conf }}"
-  notify:
-    - Restart JBCS
+- block:
+    - name: "Ensures HTTPd SSL configuration is deployed"
+      template:
+        src: templates/ssl.conf.j2
+        dest: "{{ ssl_conf }}"
+      notify:
+        - Restart JBCS
+
+    - stat:
+        path: "{{ ssl_conf_disabled }}"
+      register: is_ssl_conf_disabled
+
+    - name: "Remove disabled conf if exists"
+      file:
+        path: "{{ ssl_conf_disabled }}"
+        state: absent
+      when:
+        - is_ssl_conf_disabled.stat.exists
   when:
     - httpd_ssl is defined
