keycloak: extract install from main.yml into install.yml

--- a/roles/3trains_keycloak/tasks/main.yml
+++ b/roles/3trains_keycloak/tasks/main.yml
@@ -6,77 +6,7 @@
   tags:
     - prereqs
 
-- name: check for an existing deployment
-  become: yes
-  stat:
-    path: "{{ keycloak_jboss_home }}"
-  register: existing_deploy
-
-- block:
-    - name: stop the old keycloak service
-      become: yes
-      ignore_errors: yes
-      systemd:
-        name: keycloak
-        state: stopped
-    - name: remove the old Keycloak deployment
-      become: yes
-      file:
-        path: "{{ keycloak_jboss_home }}"
-        state: absent
-  when: existing_deploy.stat.exists and keycloak_force_install|bool
-
-- name: check for an existing deployment after possible forced removal
-  become: yes
-  stat:
-    path: "{{ keycloak_jboss_home }}"
-  register: existing_deploy
-
-- name: create Keycloak service user/group
-  become: yes
-  user:
-    name: "{{ keycloak_service_user }}"
-    home: /opt/keycloak
-    system: yes
-    create_home: no
-
-- name: create Keycloak install location
-  become: yes
-  file:
-    dest: "{{ keycloak_dest }}"
-    state: directory
-    owner: "{{ keycloak_service_user }}"
-    group: "{{ keycloak_service_group }}"
-
-- block:
-    - set_fact:
-        archive: "{{ keycloak_dest }}/{{ keycloak_archive }}"
-    - stat:
-        path: "{{ archive }}"
-      register: archive_path
-
-    - name: download Keycloak archive to target
-      get_url:
-        url: "{{ keycloak_download_url }}"
-        dest: "{{ keycloak_dest }}"
-        owner: "{{ keycloak_service_user }}"
-        group: "{{ keycloak_service_group }}"
-      when:
-        - archive_path is defined
-        - archive_path.stat is defined
-        - not archive_path.stat.exists
-
-    - name: extract Keycloak archive on target
-      unarchive:
-        remote_src: yes
-        src: "{{ keycloak_dest }}/{{ keycloak_archive }}"
-        dest: "{{ keycloak_dest }}"
-        creates: "{{ keycloak_jboss_home }}"
-        owner: "{{ keycloak_service_user }}"
-        group: "{{ keycloak_service_group }}"
-      notify:
-        - restart keycloak
-  become: yes
+- include_tasks: tasks/install.yml
 
 - name: create Keycloak admin user
   command:
