--- a/roles/3trains_jbcs/tasks/main.yml
+++ b/roles/3trains_jbcs/tasks/main.yml
@@ -2,6 +2,9 @@
 - include_tasks: prereqs.yml
 - include_tasks: install-jb-httpd.yml
 
+- set_fact:
+    jbcs_host: "{{ (groups['jbcs'][0] if groups['jbcs'] | length > 0 else ansible_nodename) }}"
+
 - name: "Ensures mod_cluster configuration is deployed"
   template:
     src: templates/mod_cluster.conf.j2
