jbcs: add ssl.yml to main.yml

--- a/roles/3trains_jbcs/tasks/main.yml
+++ b/roles/3trains_jbcs/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - include_tasks: prereqs.yml
 - include_tasks: install-jb-httpd.yml
+- include_tasks: ssl.yml
 
 - set_fact:
     jbcs_host: "{{ (groups['jbcs'][0] if groups['jbcs'] | length > 0 else ansible_nodename) }}"
@@ -9,6 +10,8 @@
   template:
     src: templates/mod_cluster.conf.j2
     dest: /opt/jbcs-httpd24-2.4/httpd/conf.d/mod_cluster.conf
+  notify:
+    - Restart JBCS
 
 - name: configure firewall for JBCS ports
   become: yes
