--- a/roles/3trains_wildfly/tasks/prereqs.yml
+++ b/roles/3trains_wildfly/tasks/prereqs.yml
@@ -36,9 +36,9 @@
     state: directory
 
 - name: "Deploy custom jcliff custom ruleset"
-  template:
+  copy:
     dest: /etc/jcliff/
-    src: templates/remote_sockets.jcliff.yml
+    src: files/custom/remote_sockets.jcliff.yml
 
 - name: Add missing rules to jcliff ruleset
   copy:
