wfly: fix sgg to work if var is undefined

--- a/roles/3trains_wildfly/tasks/jcliff/jcliff-with-keycloak.yml
+++ b/roles/3trains_wildfly/tasks/jcliff/jcliff-with-keycloak.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Fine tuning configuration: {{ instance_name }}"
+- name: "Fine tuning configuration: {{ instance_name | default('localhost') }}"
   jcliff:
     wfly_home: "{{ wildfly.home }}"
     rule_file: roles/3trains_wildfly/files/custom/
