--- a/roles/3trains_wildfly/tasks/restart_wfly_instance.yml
+++ b/roles/3trains_wildfly/tasks/restart_wfly_instance.yml
@@ -1,9 +1,11 @@
 ---
+- assert:
+    that:
+      - nb_instances is defined
+    quiet: true
+
 - name: 'Restart Wildfly instances'
   service:
     name: "{{ wildfly.config.name }}-{{ item }}"
     state: restarted
-  loop:
-    - 1
-    - 2
-    - 3
+  loop: "{{ range(1, (nb_instances|int + 1)) | list }}"
