--- a/roles/3trains_postgresql/defaults/main.yml
+++ b/roles/3trains_postgresql/defaults/main.yml
@@ -1,11 +1,13 @@
 ---
-packages_list:
-  - python39
-  - python39-devel
-  - python3-psycopg2
-  - postgresql-server
-  - postgresql-devel
-db:
-  name: "{{ postgres.db_name | default('default_db') }}"
-  user: "{{ postgres.user.name | default('db_user') }}"
-  password: "{{ postgres.user.password | default('db_password') }}"
+pgsql:
+  pgdata: "{{ overrides_pgsql_pgdata | default('/var/lib/pgsql/data') }}"
+  packages_list:
+    - python39
+    - python39-devel
+    - python3-psycopg2
+    - postgresql-server
+    - postgresql-devel
+  db:
+    name: "{{ postgres.db_name | default('default_db') }}"
+    user: "{{ postgres.user.name | default('db_user') }}"
+    password: "{{ postgres.user.password | default('db_password') }}"
