keycloak: refactor restart handlers to be used from a playbook

--- a/roles/3trains_keycloak/handlers/main.yml
+++ b/roles/3trains_keycloak/handlers/main.yml
@@ -5,8 +5,4 @@
   become: yes
 
 - name: restart keycloak
-  systemd:
-    name: keycloak
-    enabled: yes
-    state: restarted
-  become: yes
+  include_tasks: restart_keycloak.yml
