wfly: ensure JCliff version is high enough to have the required feature

--- a/roles/3trains_wildfly/tasks/jcliff/jcliff-with-keycloak.yml
+++ b/roles/3trains_wildfly/tasks/jcliff/jcliff-with-keycloak.yml
@@ -1,4 +1,9 @@
 ---
+- name: "Ensures JCliff version is appropriate"
+  yum:
+    name: jcliff>=2.12.8
+    state: present
+
 - name: "Fine tuning configuration: {{ instance_name | default('localhost') }}"
   jcliff:
     wfly_home: "{{ wildfly.home }}"
