--- a/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
+++ b/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
@@ -42,14 +42,6 @@
 
     - include_tasks: keycloak-configuration.yml
 
-    - include_tasks: jcliff/jcliff-with-keycloak.yml
+    - include_tasks: jcliff-with-keycloak.yml
   when:
     - not disable_keycloak is defined
-
-- name: "Configure Wildfly without Keycloak support"
-  include_tasks: jcliff/jcliff-without-keycloak.yml
-  when:
-    - disable_keycloak is defined
-
-- debug:
-    msg: "nb_instance_by_node: {{ nb_instances }}"
