--- a/roles/3trains_postgresql/templates/pg_hba.conf
+++ b/roles/3trains_postgresql/templates/pg_hba.conf
@@ -81,6 +81,9 @@ local   all             all                                     trust
 local   all             all                                     trust
 # IPv4 local connections:
 host    all             all             127.0.0.1/32            trust
+{% if groups['wildfly'] is defined and groups['wildfly'] | length > 0 %}{% for w in groups['wildfly'] %}
+host    all             all             {{ w }}                   trust
+{% endfor %}{% endif %}
 # IPv6 local connections:
 host    all             all             ::1/128                 trust
 # Allow replication connections from localhost, by a user with the
