--- a/roles/3trains_wildfly/tasks/uninstall_wfly_instance.yml
+++ b/roles/3trains_wildfly/tasks/uninstall_wfly_instance.yml
@@ -13,13 +13,13 @@
   service:
     name: "{{ wildfly.config.name }}-{{ item }}"
     state: stopped
-  loop: "{{ nb_instance_by_node }}"
+  loop: "{{ range(1, (nb_instances|int + 1)) | list }}"
 
 - name: "Delete all runtimes data"
   file:
     state: absent
     path: "{{ wildfly.basedir_prefix }}{{ item }}"
-  loop: "{{ nb_instance_by_node }}"
+  loop: "{{ range(1, (nb_instances|int + 1)) | list }}"
 
 - name: "Uninstall Wildfly binaries"
   file:
