pgsql: only define bind_addr if pgsql has a dedicated host

--- a/roles/3trains_postgresql/tasks/main.yml
+++ b/roles/3trains_postgresql/tasks/main.yml
@@ -37,6 +37,8 @@
     mode: 0600
   notify:
     - restart postgres
+  when:
+    - groups['pgsql'][0] != 'localhost'
 
 - name: "Ensure the PostgreSQL service is running"
   service:
