--- a/roles/3trains_keycloak/tasks/demo_urls_redirects/demo_app_all_urls_by_host.yml
+++ b/roles/3trains_keycloak/tasks/demo_urls_redirects/demo_app_all_urls_by_host.yml
@@ -1,14 +1,17 @@
 ---
 - assert:
     that:
-      - nb_instances is defined
       - url is defined
       - app_list_by_instance is defined
     quiet: true
+
+- set_fact:
+    nb_instances: 3
+  when:
+    - not nb_instances is defined
 
 - set_fact:
     app_list_by_instance: "{{ app_list_by_instance }} + ['{{ url }}:{{ 8080 + (port_shift * 100) }}']"
   loop: "{{ range(1, (nb_instances|int + 1)) | list }}"
   loop_control:
     loop_var: port_shift
-
