--- a/playbooks/status_all_wildfly_instances.yml
+++ b/playbooks/status_all_wildfly_instances.yml
@@ -5,6 +5,10 @@
 
     - set_fact:
         nb_instances: "{{ (nb_instance_by_node | default(2) ) }}"
+        status_report: []
 
     - include_tasks: roles/3trains_wildfly/tasks/status.yml
       loop: "{{ range(1, (nb_instances|int + 1)) | list }}"
+
+    - debug:
+        msg: "{{ status_report }}"
