--- a/roles/3trains_wildfly/tasks/status.yml
+++ b/roles/3trains_wildfly/tasks/status.yml
@@ -22,15 +22,17 @@
       when: debug_status is defined
 
 - block:
-    - debug:
-        msg: "service {{ service_name }} is running"
+    - set_fact:
+        status_result: "{{ ansible_nodename }} : service {{ service_name }} is running"
       when:
         - wfly_status_res.rc == 0
 
-    - debug:
-        msg: "service {{ service_name }} is NOT running"
-      changed_when: true
+    - set_fact:
+        status_result: "{{ ansible_nodename }} : service {{ service_name }} is NOT running"
       when:
         - wfly_status_res.rc != 0
+
+    - set_fact:
+        status_report: "{{ status_report }} + ['{{ status_result }}']"
   when:
     - wfly_status_res is defined
