--- a/roles/3trains_wildfly/tasks/keycloak-extension-install.yml
+++ b/roles/3trains_wildfly/tasks/keycloak-extension-install.yml
@@ -12,6 +12,14 @@
 - set_fact:
     jboss_cli: "{{ wildfly.home }}/bin/jboss-cli.sh -c --controller=localhost:{{ wildfly_instance_port }}"
 
+- name: Wait for wildfly port
+  wait_for:
+    port: "{{wildfly_instance_port|int}}"
+    host: localhost
+    connect_timeout: 3
+    delay: 5
+    timeout: 60
+        
 - block:
     - name: Check if Keycloak extensions installed
       command: >
