pgsql: listen on '*'; podman: rename cfg and improve script

--- a/roles/3trains_postgresql/templates/postgresql.conf
+++ b/roles/3trains_postgresql/templates/postgresql.conf
@@ -56,7 +56,9 @@
 
 # - Connection Settings -
 
-listen_addresses = {{ (groups['pgsql'][0] if groups['pgsql'] | length > 0 else 'localhost') }}
+listen_addresses = '*'
+                    #{{ hostvars[inventory_hostname]["ansible_default_ipv4"]["address"] }}'
+                    # (groups['pgsql'][0] if groups['pgsql'] | length > 0 else 'localhost')
                     # what IP address(es) to listen on;
 					# comma-separated list of addresses;
 					# defaults to 'localhost'; use '*' for all
