--- a/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
+++ b/roles/3trains_wildfly/tasks/fine-tuned-wildfly.yml
@@ -1,9 +1,9 @@
 ---
 - set_fact:
-     wildfly_instance_management_port: "{{ 9990 + ((item - wildfly.port_range_offset) * 100) }}"
-     wildfly_instance_http_port: "{{ 8080 + ((item - wildfly.port_range_offset) * 100) }}"
-     wildfly_instance_https_port: "{{ 8443 + ((item - wildfly.port_range_offset) * 100) }}"
-     wildfly_instance_ajp_port: "{{ 8009 + ((item - wildfly.port_range_offset) * 100) }}"
+    wildfly_instance_management_port: "{{ 9990 + ((item - wildfly.port_range_offset) * 100) }}"
+    wildfly_instance_http_port: "{{ 8080 + ((item - wildfly.port_range_offset) * 100) }}"
+    wildfly_instance_https_port: "{{ 8443 + ((item - wildfly.port_range_offset) * 100) }}"
+    wildfly_instance_ajp_port: "{{ 8009 + ((item - wildfly.port_range_offset) * 100) }}"
 
 - name: configure firewall for Wildfly ports
   become: yes
@@ -50,5 +50,4 @@
     - include_tasks: keycloak/keycloak-configuration.yml
 
     - include_tasks: jcliff-with-keycloak.yml
-  when:
-    - not disable_keycloak is defined
+  when: not disable_keycloak
