--- a/roles/3trains_keycloak/tasks/install.yml
+++ b/roles/3trains_keycloak/tasks/install.yml
@@ -110,7 +110,7 @@
 - name: "Deploy Keycloak's standalone.xml"
   become: yes
   template:
-    src: templates/standalone.xml.j2
+    src: "{{ 'templates/standalone-rhsso.xml.j2' if keycloak_rhsso_enable else 'templates/standalone.xml.j2' }}"
     dest: "{{ keycloak_jboss_home }}/standalone/configuration/standalone.xml"
   notify:
     - restart keycloak
