--- a/roles/3trains_wildfly/tasks/appserver.yml
+++ b/roles/3trains_wildfly/tasks/appserver.yml
@@ -2,28 +2,29 @@
 - set_fact:
     instance_id: "{{ item }}"
 
-- name: "Set up for Wildfly instance wfly-{{ item }}"
+- name: "Set up for Wildfly instance {{ instance_id }}"
   include_role:
     name: wildfly_systemd
   vars:
     wildfly_home: "{{ wildfly.home }}"
     wildfly_user: "{{ wildfly.user }}"
-    wilfly_group: "{{ wildfly.group }}"
+    wildfly_group: "{{ wildfly.group }}"
     wildfly_config_base: "{{ wildfly.config.base }}"
-    wildfly_basedir_prefix: "{{ wildfly.basedir_prefix }}"
-    wildfly_config_name: "{{ wildfly.config.name }}"
+    wildfly_basedir_prefix: "/var/run/{{ inventory_hostname }}"
+    wildfly_config_name: "{{ inventory_hostname }}"
     wildfly_port_range_offset: 0
+    wildfly_instance_name: "{{ inventory_hostname }}"
     instance_id: "{{ item }}"
 
-- name: "Install Keycloak Extension on instance wfly-{{ item }}"
+- name: "Install Keycloak Extension on instance {{ instance_name }}"
   include_tasks: keycloak/keycloak-extension-install.yml
   when:
     - not enable_rhsso
 
-- name: "Install RHSSO Extension on instance wfly-{{ item }}"
+- name: "Install RHSSO Extension on instance {{ instance_name }}"
   include_tasks: keycloak/keycloak-extension-install.yml
   when:
     - enable_rhsso
 
-- name: "Deploy app on instance wfly-{{ item }}"
+- name: "Deploy app on instance {{ instance_name }}"
   include_tasks: fine-tuned-wildfly.yml
